<resources>
    <string name="app_name">水迅通</string>
    <string name="web_frame">Web网页框架</string>
    <string name="setting">设置</string>
    <string name="alarm">报警</string>
    <string name="refresh">刷新</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_password">密码长度不足</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">该项必填</string>
    <string name="system">系统</string>
    <string name="save_pwd">保存密码</string>
    <string name="service_url">服务地址</string>
    <string name="default_system">默认系统</string>
    <string name="refresh_systems">刷新系统缓存</string>
    <string name="save_settings">保存设置</string>
    <string name="company">公司:</string>
    <string name="add_favorite">收藏</string>
    <string name="remove_favorite">取消收藏</string>
</resources>
